<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DocumentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/floationBackBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_float_btn"
            android:elevation="10dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/documentCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Documents"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/floationBackBtn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/documentCaption" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uploadImageInput"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Driver_Image_Document"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="24dp"
                android:cursorVisible="false"
                android:drawableRight="@drawable/upgrade_24"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uploadDocument"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/uploadImage"
            app:layout_constraintStart_toStartOf="@+id/uploadImage"
            app:layout_constraintTop_toBottomOf="@id/uploadImage" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uploadDocumentInput"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Driver_Licence_Document"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="24dp"
                android:cursorVisible="false"
                android:drawableRight="@drawable/upgrade_24"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverPermit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/uploadDocument"
            app:layout_constraintStart_toStartOf="@+id/uploadDocument"
            app:layout_constraintTop_toBottomOf="@+id/uploadDocument" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/driverPermitInput"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Moto_Permit_Document"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="24dp"
                android:cursorVisible="false"
                android:drawableRight="@drawable/upgrade_24"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverId"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/driverPermit"
            app:layout_constraintStart_toStartOf="@+id/driverPermit"
            app:layout_constraintTop_toBottomOf="@+id/driverPermit" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/driverIdInput"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Personal_Id_Document"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="24dp"
                android:cursorVisible="false"
                android:drawableRight="@drawable/upgrade_24"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verifyTextWrapper"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/call_support"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,20:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverId"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26999998" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>