<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DriverRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/floationBackBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_float_btn"
            android:elevation="10dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerAsDriverCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="REGISTER AS A DRIVER"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constrainedHeight="false"
            app:layout_constraintBottom_toTopOf="@+id/driverFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/floationBackBtn"
            app:layout_constraintVertical_bias="0.36"
            app:layout_constraintWidth_percent=".72" />
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverFirstName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/driverLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAsDriverCaption"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Driver_Reg_FirstName"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverLastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/driverFirstName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/driverFirstName"
            app:layout_constraintTop_toBottomOf="@+id/driverFirstName"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Driver_Reg_LastName"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:elevation="8dp"
            android:ems="10"
            android:background="@drawable/register_driver_edittext"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            app:boxStrokeColor="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/driverLastName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/driverLastName"
            app:layout_constraintTop_toBottomOf="@+id/driverLastName"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/register_driver_edittext"
                android:hint="@string/Driver_Reg_Email"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/driverZoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/register_driver_edittext"
            android:elevation="8dp"
            android:shadowRadius="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/driverEmail"
            app:layout_constraintTop_toBottomOf="@+id/driverEmail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verifyTextWrapper"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/call_support"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/resend_code_text"
            app:layout_constraintDimensionRatio="w,20:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverZoneSpinner"
            app:layout_constraintVertical_bias="0.19">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26999998" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/dontGetCodeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="By submitting you agree to the"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/verifyTextWrapper"
            app:layout_constraintStart_toStartOf="@+id/verifyTextWrapper"
            app:layout_constraintTop_toBottomOf="@+id/verifyTextWrapper" />

        <TextView
            android:id="@+id/resendCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="Terms &amp; Conditions"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dontGetCodeTxt"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/dontGetCodeTxt"
            app:layout_constraintTop_toBottomOf="@+id/dontGetCodeTxt"
            app:layout_constraintVertical_bias="0.04000002" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>